--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 /* google font */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
 body{
     font-family: 'Poppins', sans-serif;
     background-color: rgba(170, 170, 170, 0.096);
     width: 1120px;
     margin:30px auto;
+   
 }
 
 /* header section */ 
@@ -46,3 +47,58 @@ body{
     color: #3A3A3A;
 
 }
+
+/* header-section */ 
+
+.header-section-wrapper{
+    display: flex;
+    justify-content: space-between;
+    margin-top:60px;
+}
+.section-left{
+    width: 582px;
+    height: 270px;
+}
+.section-left h1{
+    font-size: 2.4em;
+    font-weight: 900;
+    color: #3A3A3A;
+}
+.section-left p{
+    width: 450px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    color: #3A3A3A;
+}
+.section-right{
+    width: 440px;
+    height: 414px;
+  
+}
+.section-right img{
+    border-radius: 50%;
+    width: 380px;
+    height: 374px;
+}
+.section-left .button{
+    width: 196px;
+    height: 44px;
+    background: #E02C6D;
+    border-radius: 41px;
+    border:none;
+    color: aliceblue;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    line-height: 24px;
+}
+.fas{
+    margin-left: 10px;
+}
+
+/* logo start */ 
+
