--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
     background-color: rgba(170, 170, 170, 0.096);
     width: 1120px;
     margin:30px auto;
+    
    
 }
 
@@ -76,12 +77,14 @@ body{
 .section-right{
     width: 440px;
     height: 414px;
+    animation: mic 2.7s ease-in-out infinite alternate;
   
 }
 .section-right img{
-    border-radius: 50%;
+    
     width: 380px;
     height: 374px;
+    
 }
 .section-left .button{
     width: 196px;
@@ -100,5 +103,23 @@ body{
     margin-left: 10px;
 }
 
+@keyframes mic {
+    0%{
+        transform: scale(0.7);
+        transition: transform 4s ease-in-out all;        
+    }   
+}
+
 /* logo start */ 
 
+
+.logo{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 80px;
+    align-items: center;
+    border-top: 2px solid rgba(128, 128, 128, 0.199);
+    border-bottom: 2px solid rgba(128, 128, 128, 0.199);
+    padding:20px;
+    
+}
