--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,20 @@
 /* google font */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+*{
+    margin:0;
+    padding: 0;
+}
 
 body{
     font-family: 'Poppins', sans-serif;
     background-color: rgba(170, 170, 170, 0.096);
+
+}
+.align-wrapper{
     width: 1120px;
-    margin:30px auto;
-    
-   
+    margin: 30px auto;
+
 }
 
 /* header section */ 
@@ -64,6 +70,7 @@ body{
     font-size: 2.4em;
     font-weight: 900;
     color: #3A3A3A;
+    margin-bottom: 10px;
 }
 .section-left p{
     width: 450px;
@@ -73,6 +80,7 @@ body{
     font-size: 16px;
     line-height: 24px;
     color: #3A3A3A;
+    margin-bottom: 19px;
 }
 .section-right{
     width: 440px;
@@ -129,18 +137,18 @@ body{
 }
 .upper{
     display: flex;
-    height: 595px;
+    height: 500px;
     margin-bottom: 30px;
   
 }
 .middle{
     display: flex;
-    height: 593px;
+    height: 500px;
     margin-bottom: 30px;
 }
 .lower{
     display: flex;
-    height: 593px;
+    height: 500px;
     margin-bottom: 30px;
     margin-left: 34px;
 }
@@ -311,7 +319,7 @@ body{
     color: orangered;
 }
 .lower-three-text p{
-    margin-top: 640px;
+    margin-top: 565px;
     margin-left: -140px;
     color:rgba(224, 44, 109, 0.87);
     font-weight: 600;
@@ -337,10 +345,11 @@ body{
     font-size: 2.1em;
     font-weight: 900;
     margin-top: 0;
+    margin-bottom: 20px;
 }
  .right-content p{
    margin-top: 0;
-   margin-bottom: 32px;
+   margin-bottom: 36px;
    color: rgba(108, 108, 108, 1);
    width: 501px;
    font-weight: bold;
@@ -359,5 +368,34 @@ body{
     font-size: 15px;
     line-height: 24px; 
  }
-
+.lower-three-text a{
+    text-decoration: none;
+}
  
+/* footer start */ 
+
+.footer-wrapper{
+    margin-top: 100px;
+    margin-bottom: 0;
+    background-color: #130f40;
+    padding: 40px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.footer-wrapper p{
+    font-size: 13px;
+    margin: 10px;
+}
+.footer-icons .fab{
+    margin-top:15px;
+    text-align: center;
+    margin-left: 20px;
+    color: white;
+    background-color: rgba(58, 58, 58, 0.514);
+    padding: 7px;
+    border-radius: 50%;
+}
